@startuml

title __SAMPLE's Class Diagram__\n

  namespace sample {
    class sample.Controller {
        {static} + LOSS : int
        {static} + SUCCESS : int
        + count : int
        + count1 : int
        + falseAnswers : Label
        + number1 : Button
        + number2 : Button
        + rightAnswers : Label
        ~ a : int
        ~ b : int
        + handle()
        + initialize()
        + number1Pressed()
        + number2Pressed()
    }
  }
  

  namespace sample {
    class sample.Main {
        {static} + main()
        + start()
        + writeKeyCode()
    }
  }
  

  sample.Controller o-- model.Handler : chain
  sample.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
